# stm32-llvm

./: CMakeLists.txt  CMakePresets.json  README.md  info.txt  startup_stm32f10x_md_vl.s
debug/: openocd-start.sh  run.gdb
include/: rcc.hpp  reg.hpp
src/: init.cpp  interrupt.cpp  main.cpp
